Updated localization file.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@7180 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/src/admin/help/ru/adddatapath.html
+++ b/src/admin/help/ru/adddatapath.html
@@ -5,7 +5,7 @@
      
      <!-- Novell iFolder 3.x iManager Plugin  --> 
    
-     <title>Регистрация в приложении веб-администрирования</title>  	 
+     <title>Вход в приложение веб-администрирования</title>  	 
             
      <!-- Metadata -->
    
