--- a/src/admin/help/ru/ifolderdetails.html
+++ b/src/admin/help/ru/ifolderdetails.html
@@ -79,7 +79,7 @@
         <P>Имя пользователя владельца выбранной папки iFolder. Владельцем может быть индивидуальный пользователь или группа LDAPGroup. Если группа LDAPGroup является владельцем папки iFolder, у всех ее членов одинаковые права доступа. Владельцем папок iFolder с нарушенными ассоциациями назначается администратор iFolder до тех пор, пока они не будут переназначены или удалены.</P>
         <p>Щелкните ссылку с именем пользователя владельца для просмотра подробной информации о его учетной записи.</p> 
         <P>Владелец папки iFolder обладает правом доступа &quot;Полный контроль&quot; для этой папки. Владелец управляет членством и правами доступа пользователей, а также может лишить любого из членов права &quot;Полный контроль&quot;.</P>
-      </TD></TR><TR><TD VALIGN="TOP"><P>Путь</P></TD><TD><P>Действительное расположение папки iFolder и ее данных на сервере. Примеры:</P><P>/var/opt/novell/ifolder3/simias/SimiasFiles/<I>e84fdc6e-3d51-49df-ae3f-8c9213c76994</I>/&lt;имя_iFolder&gt;</P><P>В данном примере <I>e84fdc6e-3d51-49df-ae3f-8c9213c76994</I> - это уникальный идентификатор совместного использования iFolder.</P></TD><TR><TD VALIGN="TOP">
+      </TD></TR><TR><TD VALIGN="TOP"><P>Путь</P></TD><TD><P>Действительное расположение папки iFolder и ее данных на сервере. Например:</P><P>/var/opt/novell/ifolder3/simias/SimiasFiles/<I>e84fdc6e-3d51-49df-ae3f-8c9213c76994</I>/&lt;имя_iFolder&gt;</P><P>В данном примере <I>e84fdc6e-3d51-49df-ae3f-8c9213c76994</I> - это уникальный идентификатор совместного использования iFolder.</P></TD><TR><TD VALIGN="TOP">
         <P>Изменено</P>
       </TD><TD>
         <P>Время и дата последнего изменения папки iFolder..</P>
@@ -389,9 +389,9 @@
 <TABLE WIDTH="93%" BORDER="1"><TR><TD CLASS="tablehead2"><P>Параметр</P></TD><TD CLASS="tablehead2"><P>Описание</P></TD></TR><TR><TD VALIGN="TOP">
         <P>Выключить синхронизацию &nbsp;</P>
       </TD><TD>
-        <P>Выберите данный параметр для выключения синхронизации (обычно временно). 
+        <P>Выберите данную опцию для выключения синхронизации (обычно временно). 
         </P>
-        <P>Отмените выбор параметра для разрешения синхронизации данных в папке iFolder.</P>
+        <P>Отмените выбор опции для разрешения синхронизации данных в папке iFolder.</P>
         <P>Значение по умолчанию: &quot;Включено&quot;, &quot;Да&quot;.</P>
       </TD></TR><TR><TD VALIGN="TOP">
         <P>Квота диска&nbsp;</P>
@@ -442,8 +442,8 @@
         <P> Интервал синхронизации &nbsp;</P>
       </TD><TD>
         <P>Установите флажок &quot;Интервал синхронизации&quot;, чтобы включить параметр минимального интервала для выбранной папки iFolder, а затем укажите минимальное значение в минутах, которое пользователи могут задать в клиенте iFolder.</P>
-        <P> Чтобы выключить этот параметр, снимите флажок &quot;Интервал синхронизации&quot;. Если данный параметр выключен, отображается значение &quot;Без ограничения&quot;.</P>
-        <P> Если данный параметр включен, значение минимального интервала синхронизации в минутах позволяет задать минимальное время, затрачиваемое клиентом пользователя на проверку данных iFolder на сервере и в локальных папках iFolder для определения файлов, которые необходимо загрузить или отправить.</P>
+        <P> Чтобы выключить этот параметр, снимите флажок &quot;Интервал синхронизации&quot;. Если данная опция выключена, отображается значение &quot;Без ограничения&quot;.</P>
+        <P> Если данная опция включена, значение минимального интервала синхронизации в минутах позволяет задать минимальное время, затрачиваемое клиентом пользователя на проверку данных iFolder на сервере и в локальных папках iFolder для определения файлов, которые необходимо загрузить или отправить.</P>
   <P>      Эффективным минимальным интервалом синхронизации всегда является самое высокое значение следующих параметров:</P>
   <ul>
     <li>
@@ -466,7 +466,7 @@
         <B>Аннулировать</B><BR>
         Выберите <i>Аннулировать</i>, чтобы удалить всех членов с правами на совместное использование из списка для выбранной папки iFolder.<br>
 		<ul>
-          <P><font size="-1"><b>ВАЖНО.</b> Оба эти параметра отключены, если на уровне системы или пользователя включен и применяется параметр <i>Совместное использование</i>.</font></P>
+          <P><font size="-1"><b>ВАЖНО.</b> Обе этих опции отключены, если на уровне системы или пользователя включен и применяется параметр <i>Совместное использование</i>.</font></P>
         </ul>
       </TD></TR></TABLE><BR><P> 
   
