--- a/src/admin/help/ru/ifolders.html
+++ b/src/admin/help/ru/ifolders.html
@@ -83,8 +83,8 @@
       <P>Выберите действие, которое необходимо совершить над папкой iFolder:</P>
     </LI>
 	<ul><li><P>Щелкните &quot;Удалить&quot; для удаления папки iFolder.</P><li><P>Щелкните &quot;Включить&quot; для разрешения доступа к iFolder.</P>
-        <P>Это позволяет пользователю регистрироваться в папках iFolder и выполнять их синхронизацию.</P>
-      </li><li><P>Щелкните &quot;Запретить&quot; для запрета доступа к папке iFolder.</P><P> Сеанс пользователя, зарегистрированного на момент установки данного значения, продолжается до тех пор, пока не будет выполнена разрегистрация. Данная политика вступает в силу при следующей попытке пользователя зарегистрироваться с использованием своей учетной записи. Чтобы блокировка вступила в силу немедленно, необходимо перезапустить сервисы Apache для сервера iFolder. При этом выполняется отключение всех активных сеансов, включая сеансы пользователей.</P></li></ul>
+        <P>Это позволяет пользователю входить в папки iFolder и выполнять их синхронизацию.</P>
+      </li><li><P>Щелкните &quot;Запретить&quot; для запрета доступа к папке iFolder.</P><P> Сеанс пользователя, вошедшего в систему на момент установки данного значения, продолжается до тех пор, пока не будет выполнен выход. Данная политика вступает в силу при следующей попытке пользователя войти в систему с использованием своей учетной записи. Чтобы блокировка вступила в силу немедленно, необходимо перезапустить сервисы Apache для сервера iFolder. При этом выполняется отключение всех активных сеансов, включая сеансы пользователей.</P></li></ul>
        
    
   </OL><BLOCKQUOTE>
