--- a/src/admin/help/ru/ldapsettings.html
+++ b/src/admin/help/ru/ldapsettings.html
@@ -84,10 +84,10 @@
       </TD><TD>
         <P>Прокси-пользователем iFolder является существующая электронная персона прокси-пользователя, используемая для доступа к серверу LDAP с правами на чтение с целью получения списка авторизованных пользователей. Прокси-пользователь автоматически создается во время конфигурирования корпоративного сервера iFolder с помощью утилиты YaST. Имя пользователя автоматически создается таким образом, чтобы обеспечить уникальность в системе. </P>
     <P> Убедитесь, что учетная запись пользователя, назначенная прокси-пользователю iFolder, не совпадает с учетными записями администратора и других системных пользователей. Разделение прокси-пользователя и администратора обеспечивает разделение привилегий, кроме того, это важно, поскольку пароль прокси-пользователя хранится в файловой системе сервера iFolder.</P>
-    <P> Укажите полное характерное имя существующего пользователя, которого необходимо назначить прокси-пользователем iFolder. Эта электронная персона должна иметь право &quot;Чтение&quot; на LDAP каталог. Примеры: </P>
+    <P> Укажите полное характерное имя существующего пользователя, которого необходимо назначить прокси-пользователем iFolder. Эта электронная персона должна иметь право &quot;Чтение&quot; на LDAP каталог. Например: </P>
         <P> cn=iFolderProxy,o=acme</P>
     <P> Введите пароль нового пользователя в поле &quot;Пароль прокси-пользователя&quot;.</P>
-        <P> После изменения прокси-пользователя, возможно, потребуется немедленно синхронизировать список пользователей LDAP с использованием информации о прокси-пользователе iFolder. В противном случае информация о прокси-пользователе не будет протестирована до следующей запланированной синхронизации списка пользователей. Выберите параметр <i>Синхронизировать сейчас</i> в разделе <i>Информация о LDAP</i> на странице &quot;Информация о сервере&quot;, чтобы принудительно синхронизировать список пользователей iFolder и проверить параметры нового прокси-пользователя.</P>
+        <P> После изменения прокси-пользователя, возможно, потребуется немедленно синхронизировать список пользователей LDAP с использованием информации о прокси-пользователе iFolder. В противном случае информация о прокси-пользователе не будет протестирована до следующей запланированной синхронизации списка пользователей. Выберите опцию <i>Синхронизировать сейчас</i> в разделе <i>Информация о LDAP</i> на странице &quot;Информация о сервере&quot;, чтобы принудительно синхронизировать список пользователей iFolder и проверить параметры нового прокси-пользователя.</P>
       </TD></TR>
 	<TR><TD VALIGN="TOP"><P>Пароль прокси-пользователя&nbsp;</P></TD><TD>
         <P>Пароль используется для аутентификации прокси-пользователя iFolder на сервере LDAP, когда iFolder синхронизирует информацию о пользователях с сервером LDAP. </P>
@@ -99,7 +99,7 @@
       </TD></TR><TR><TD VALIGN="TOP">
         <P>Контексты LDAP</P>
       </TD><TD>
-        <P> Укажите или измените контейнеры, группы и пользователей LDAP, среди которых iFolder выполняет поиск списка авторизованных пользователей во время подготовки серверов iFolder к работе на данном корпоративном сервере. Контексты LDAP указываются в формате LDAP. Примеры: </P>
+        <P> Укажите или измените контейнеры, группы и пользователей LDAP, среди которых iFolder выполняет поиск списка авторизованных пользователей во время подготовки серверов iFolder к работе на данном корпоративном сервере. Контексты LDAP указываются в формате LDAP. Например: </P>
         <P> cn=group,o=acme#cn=dbgroup,o=acme#</P>
         <P>Чтобы изменить значение, выберите его, внесите изменения и щелкните <i>ОК</i> для применения изменений.</P>  
   
