--- a/src/admin/help/ru/serverdetails.html
+++ b/src/admin/help/ru/serverdetails.html
@@ -114,7 +114,7 @@
 	  
   <H4><a name="reports"></a>Просмотр отчетов сервера </H4>
   <P>Выберите отчет в раскрывающемся списке, чтобы просмотреть его.</P> 
-  <p>Данная функция недоступна, если на странице &quot;Отчет&quot; не выбран параметр &quot;Включить формирование отчетов&quot;.</P>
+  <p>Данная опция недоступна, если на странице &quot;Отчет&quot; не выбран параметр &quot;Включить формирование отчетов&quot;.</P>
 	<A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="В начало"></A>
   <H4><a name="logs"></a>Просмотр журналов сервера </H4>
   <P>Можно просмотреть следующую информацию журналов сервера:</P>
@@ -151,7 +151,7 @@
         <P>Информация</P>
       </TD>
       <TD> 
-        <P>Отображение основных операций сервера, которые позволяют службе поддержки Novell устранить возникшие проблемы. Данный параметр установлен по умолчанию.</P>
+        <P>Отображение основных операций сервера, которые позволяют службе поддержки Novell устранить возникшие проблемы. Данная опция выбрана по умолчанию.</P>
 		
       </TD><TR><TD VALIGN="TOP">
         <P>Предупреждение</P>
