--- a/src/admin/help/ru/servers.html
+++ b/src/admin/help/ru/servers.html
@@ -91,7 +91,7 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
       <p>На странице &quot;Сервер&quot; выполните поиск сервера, задав критерий поиска в средстве поиска.</p>
     </li>
     <li> 
-      <p>Щелкните ссылку с именем сервера, чтобы открыть на странице &quot;Серверы&quot; страницу &quot;Информация о сервере&quot;.</p><p><B><FONT SIZE="-1">Важно.</FONT></B> <FONT SIZE="-1"> На данной странице отображается информация только для сервера, на котором вы зарегистрированы в данный момент. Чтобы отобразить информацию о другом сервере, необходимо зарегистрироваться в консоли веб-администрирования соответствующего сервера.</font></p>
+      <p>Щелкните ссылку с именем сервера, чтобы открыть на странице &quot;Серверы&quot; страницу &quot;Информация о сервере&quot;.</p><p><B><FONT SIZE="-1">Важно.</FONT></B> <FONT SIZE="-1"> На данной странице отображается информация только для сервера, на который вошел пользователь. Чтобы отобразить информацию о другом сервере, необходимо войти в консоль веб-администрирования соответствующего сервера.</font></p>
           </li>
   </ol>
 <P><A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="В начало"></A></P>
