--- a/src/admin/help/ru/systeminfo.html
+++ b/src/admin/help/ru/systeminfo.html
@@ -79,7 +79,7 @@ div.Section1
       </TD>
     <tr>
       <TD VALIGN="TOP">
-        <P>Параметр SSL</P>
+        <P>Опция SSL</P>
         
       </TD>
       <TD> 
@@ -98,7 +98,7 @@ div.Section1
       </TD></TR><TR><TD VALIGN="TOP">
         Порядок отображения полных имен</TD><TD>
         <p>
-        Позволяет задать порядок, в котором отображается полное имя пользователя. Вариант <i>(Имя, фамилия)</i> предписывает выводить сначала имя, затем &mdash; фамилию. Чтобы отображать сначала фамилию, а затем имя, выберите вариант <i>(Фамилия, имя)</i>. </p>
+        Позволяет задать порядок, в котором отображается полное имя пользователя. Опция <i>(Имя, фамилия)</i> предписывает выводить сначала имя, затем &mdash; фамилию. Чтобы отображать сначала фамилию, а затем имя, выберите опцию <i>(Фамилия, имя)</i>. </p>
         <p class="Normal2">
         Изменения вступят в силу только после запланированной или ручной синхронизации LDAP. Для того чтобы провести синхронизацию LDAP вручную, выполните указанные ниже действия.</p>
         <ol>
@@ -115,12 +115,11 @@ div.Section1
         <p class="Normal2">
         <span style="font-size:11.0pt;font-family:Arial;">Позволяет выбрать способ управления совокупной квотой диска, определенной для групп. </span></p>
         <p class="Normal2">
-        <span style="font-size:11.0pt;font-family:Arial;">Опция <i>Консоль администратора</i> позволяет администраторам явным образом управлять квотой диска для групп и их членов. Выбор этого варианта ограничивает квоту диска, назначенную пользователям, совокупным объемом используемого группой места на диске. Вариант <i>Консоль администратора</i> выбран по умолчанию.</span></p>
+        <span style="font-size:11.0pt;font-family:Arial;">Опция <i>Консоль администратора</i> позволяет администраторам явным образом управлять квотой диска для групп и их членов. Выбор этой опции ограничивает квоту диска, назначенную пользователям, совокупным объемом используемого группой места на диске. Опция <i>Консоль администратора</i> выбрана по умолчанию.</span></p>
         <p class="Normal2">
-        <span style="font-size:11.0pt;font-family:Arial;">Вариант <i>Подсистема синхронизации</i> позволяет управлять совокупной квотой диска для групп в серверном компоненте с помощью подсистемы синхронизации. Подсистема синхронизации проверяет, чтобы квота диска для всех пользователей группы не превышала совокупную квоту диска группы.</span></p>
+        <span style="font-size:11.0pt;font-family:Arial;">Опция <i>Подсистема синхронизации</i> позволяет управлять совокупной квотой диска для групп в серверном компоненте с помощью подсистемы синхронизации. Подсистема синхронизации проверяет, чтобы квота диска для всех пользователей группы не превышала совокупную квоту диска группы.</span></p>
         <p class="Normal2">
-        &nbsp;</p>
-        </TD></TR><TR><TD VALIGN="TOP">
+        <span style="font-size:11.0pt;font-family:Arial;">Опция <i>Оба</i> позволяет использовать для управления совокупной квотой диска групп как консоль администратора, так и подсистему синхронизации.</span></TD></TR><TR><TD VALIGN="TOP">
         <span style="font-size: 11.0pt; font-family: Arial; ">Выделенные группы</span></TD><TD>
         <span style="font-size: 11.0pt; font-family: Arial; "> Позволяет выделять группы в независимые объекты и изолировать при совместном использовании папок iFolder членов одной группы от доступа к ним членов другой группы. Установите флажок <i>Создать выделенные группы</i>, чтобы разрешить совместное использование папок iFolder только в пределах групп.</span><p>
         <span style="font-family: Arial; ">Примечание.</span> <span style="font-size: 11.0pt; font-family: Arial; ">Группа LDAPGroup не может быть ни дополнительным, ни основным администратором.</span></TD></TR></TABLE>
@@ -168,7 +167,7 @@ div.Section1
     </LI>
     <ul><LI> 
         <P>Щелкните &quot;Удалить&quot; для удаления выбранного администратора.</P>
-	  <P>Если удалить права администратора iFolder для имени пользователя, с помощью которого вы зарегистрировались на сервере, Вы будете немедленно отключены. Чтобы продолжить управление сервером iFolder, Вам придется зарегистрироваться на нем, используя другое имя пользователя с правами администратора iFolder. 
+	  <P>Если удалить права администратора iFolder для имени пользователя, с помощью которого Вы вошли на сервер, Вы будете немедленно отключены. Чтобы продолжить управление сервером iFolder, Вам придется войти на него, используя другое имя пользователя с правами администратора iFolder. 
 </P>
         <P><font size="-1"><b>ВАЖНО.</b> Удалить администратора, который был задан при настройке сервера Simias, нельзя.</font></P>
     <LI> 
@@ -242,9 +241,9 @@ div.Section1
         <h4> Синхронизация </h4>
       </TD><TD>
 	    <p>Минимальный интервал синхронизации в минутах.</P>
-        <P>Если данный параметр включен, он задает минимальный интервал синхронизации данных iFolder для каждой учетной записи пользователя. Чем больше используемое значение, тем больше ограничение. 
+        <P>Если данная опция включена, она задает минимальный интервал синхронизации данных iFolder для каждой учетной записи пользователя. Чем больше используемое значение, тем больше ограничение. 
         </P>    
-        <P>Если данный параметр не включен, используется значение по умолчанию 5 минут.</P>
+        <P>Если данная опция не включена, используется значение по умолчанию 5 минут.</P>
         </TD></TR>
   <TR><TD VALIGN="TOP">
         <h4>Шифрование</h4>
@@ -266,9 +265,9 @@ div.Section1
         По умолчанию совместное использование iFolder разрешено.  Отмените выбор значения Вкл., чтобы выключить функцию совместного использования в системе iFolder. После применения данной политики пользователи этой системы iFolder не смогут совместно использовать свои папки iFolder с другими пользователями. Однако можно изменить параметры политики на уровне пользователя или группы LDAPGroup.<br>
           <BR>
         <B>Enforce</B> (Принудительно использовать)<BR>
-        Выберите Enforce (Принудительно использовать) для принудительного применения политики совместного использования, установленной на уровне системы. С помощью функции принудительного использования можно как разрешить, так и запретить совместное использование. В случае принудительного запрещения совместного использования параметры совместного использования на уровне папки iFolder и пользователя автоматически отключаются, а их изменение становится невозможным. Однако можно установить для данной политики параметр &quot;Аннулировать&quot;.<br>
+        Выберите Enforce (Принудительно использовать) для принудительного применения политики совместного использования, установленной на уровне системы. С помощью функции принудительного использования можно как разрешить, так и запретить совместное использование. В случае принудительного запрещения совместного использования параметры совместного использования на уровне папки iFolder и пользователя автоматически отключаются, а их изменение становится невозможным. Однако можно установить для данной политики опцию &quot;Аннулировать&quot;.<br>
 		<ul>
-          <P><font size="-1"><b>ВАЖНО.</b> Для включения данного параметра необходимо установить для параметра Совместное использование значение Вкл.</font></P>
+          <P><font size="-1"><b>ВАЖНО.</b> Для включения данной опции необходимо установить для опции &quot;Совместное использование&quot; значение &quot;Вкл&quot;.</font></P>
         </ul>
         <BR>
         <B>Аннулировать</B><BR>
@@ -401,7 +400,7 @@ div.Section1
   </ol>
   <p><span style="font-family:Arial;">Чтобы удалить дополнительного администратора, выполните указанные ниже действия.</span></p>
   <ol>
-    <li><font face="Arial">Откройте вкладку <i>Дополнительный</i> с подробной информацией дополнительного администратора.</font></li>
+    <li><font face="Arial">Откройте вкладку <i>Дополнительный</i> с подробной информацией о дополнительном администраторе.</font></li>
     <li><font face="Arial">Выберите дополнительного администратора и щелкните <i>Удалить</i>. В результате откроется список групп, за которыми он наблюдает.</font></li>
     <li><font face="Arial">Выберите все группы и щелкните <i>Удалить</i>. Удаление всех групп из списка групп, принадлежащих дополнительному администратору, приведет к удалению и самого администратора.<br>
 &nbsp;</font></li>
