--- a/src/admin/help/ru/userdetails.html
+++ b/src/admin/help/ru/userdetails.html
@@ -76,17 +76,17 @@
         <P>Тип члена</P>       
       </TD>
       <TD> 
-        <P>Тип члена, соответствующий текущей регистрации пользователя. Если пользователем является индивидуальный пользователь, в интерфейсе также отображается параметр &quot;Группы пользователей&quot;. Если пользователем является член группы LDAPGroup, в интерфейсе отображается параметр &quot;Члены группы&quot; со списком всех членов этой группы LDAPGroup.
+        <P>Тип члена, соответствующий пользователю, вошедшему в систему. Если пользователем является индивидуальный пользователь, в интерфейсе также отображается опция &quot;Группы пользователей&quot;. Если пользователем является член группы LDAPGroup, в интерфейсе отображается опция &quot;Члены группы&quot; со списком всех членов этой группы LDAPGroup.
       </TD></TR><TR><TD VALIGN="TOP">
         <P>Контексты LDAP</P>       
       </TD>
       <TD> 
         <P>Контекст дерева LDAP используется для персонификации доступа пользователей к iFolder. 
       </TD></TR><TR><TD VALIGN="TOP">
-        <P>Последняя регистрация</P>
+        <P>Последний вход</P>
         </TD>
       <TD> 
-        <P>Время последней регистрации пользователя в системе iFolder. 
+        <P>Время последнего входа пользователя в систему iFolder. 
       </TD></TR><TR><TD VALIGN="TOP">
         Групповая квота диска</TD>
       <TD> 
@@ -119,11 +119,11 @@
     </LI>
     <LI> 
       <P>Щелкните &quot;Включить&quot; для включения папки iFolder.</P>
-      <P>Это позволяет пользователю регистрироваться в папках iFolder и выполнять их синхронизацию.</P>
+      <P>Это позволяет пользователю входить в папки iFolder и выполнять их синхронизацию.</P>
     
     <LI> 
       <P>Щелкните &quot;Запретить&quot; для запрета доступа к папке iFolder.</P>
-      <P> Сеанс пользователя, зарегистрированного на момент установки данного значения, продолжается до тех пор, пока не будет выполнена разрегистрация. Данная политика вступает в силу при следующей попытке пользователя зарегистрироваться с использованием своей учетной записи. Чтобы блокировка вступила в силу немедленно, необходимо перезапустить сервисы Apache для сервера iFolder. При этом выполняется отключение всех активных сеансов, включая сеансы пользователей.</P>
+      <P> Сеанс пользователя, вошедшего в систему на момент установки данного значения, продолжается до тех пор, пока не будет выполнен выход. Данная политика вступает в силу при следующей попытке пользователя выполнить вход с использованием своей учетной записи. Чтобы блокировка вступила в силу немедленно, необходимо перезапустить сервисы Apache для сервера iFolder. При этом выполняется отключение всех активных сеансов, включая сеансы пользователей.</P>
     </LI>
   </OL>
 <H4>Удаление папки iFolder</H4>
@@ -146,10 +146,10 @@
 <p>В следующей таблице перечислены политики, которыми можно управлять для любой отдельной учетной записи пользователя iFolder. Измените одно или несколько из следующих значений, а затем щелкните &quot;Сохранить&quot;, чтобы новые параметры вступили в силу:</p> 
 <TABLE WIDTH="93%" BORDER="1"><TR><TD CLASS="tablehead2"><P>Параметр</P></TD><TD CLASS="tablehead2"><P>Описание</P></TD></TR><TR><TD VALIGN="TOP">
         <h4>Учетная запись </h4>
-      </TD><TD><P>Отображение информации о том, разрешено ли пользователю в данный момент зарегистрироваться для выполнения синхронизации папок iFolder. </P>
-        <P>Установите флажок для запрета регистрации с использованием учетной записи.</P>
-        <P> Установите флажок для разрешения регистрации с использованием учетной записи. </P>
-        <P>Сеанс пользователя, зарегистрированного на момент установки данного значения, продолжается до тех пор, пока не будет выполнена разрегистрация. Данная политика вступает в силу при следующей попытке пользователя зарегистрироваться с использованием своей учетной записи. Чтобы блокировка вступила в силу немедленно, необходимо перезапустить сервисы Apache для сервера iFolder. При этом выполняется отключение всех активных сеансов, включая сеансы пользователей.</P>
+      </TD><TD><P>Отображение информации о том, разрешено ли пользователю в данный момент выполнять вход для синхронизации папок iFolder. </P>
+        <P>Установите флажок для запрета входа с использованием учетной записи.</P>
+        <P> Установите флажок для разрешения входа с использованием учетной записи. </P>
+        <P>Сеанс пользователя, вошедшего в систему на момент установки данного значения, продолжается до тех пор, пока не будет выполнен выход. Данная политика вступает в силу при следующей попытке пользователя выполнить вход с использованием своей учетной записи. Чтобы блокировка вступила в силу немедленно, необходимо перезапустить сервисы Apache для сервера iFolder. При этом выполняется отключение всех активных сеансов, включая сеансы пользователей.</P>
         <P>Значение по умолчанию: &quot;Включено&quot;</P>
       </TD></TR><TR>
       <TD VALIGN="TOP"> 
@@ -171,8 +171,8 @@
         <P> <B>Лимит</B><BR>
           Максимальный общий объем пространства (в Мб) для данных пользователя iFolder во всех папках iFolder, которыми пользователь владеет в рамках данной учетной записи пользователя. <br>
           <br>
-          Отмените выбор этого параметра, если индивидуальная квота для пользователя отсутствует или для выбранной учетной записи пользователя необходимо использовать квоту на уровне группы LDAPGroup или системную квоту.<br>
-          Выберите этот параметр для принудительного использования квоты пользователя, а затем укажите общий размер квоты (в Мб) для выбранной учетной записи пользователя. <br>
+          Отмените выбор этой опции, если индивидуальная квота для пользователя отсутствует или для выбранной учетной записи пользователя необходимо использовать квоту на уровне группы LDAPGroup или системную квоту.<br>
+          Выберите эту опцию для принудительного использования квоты пользователя, а затем укажите общий размер квоты (в Мб) для выбранной учетной записи пользователя. <br>
           <br>
           <B>Используется</B><BR>
           Общий объем пространства, используемый в данный момент на сервере для всех папок iFolder, которыми владеет выбранный пользователь. <br>
@@ -260,7 +260,7 @@
 		
         <br><B>Принудительно</B><BR>
         Выберите &quot;Принудительно&quot;, чтобы включить функцию шифрования для выбранного пользователя. Если установлено значение &quot;Принудительно&quot;, пользователь не может изменить параметры шифрования для своих папок iFolder.<br>
-		<P><font size="-1"><b>ВАЖНО.</b> Данный параметр доступен только в том случае, если включена системная политика шифрования.</font></P>
+		<P><font size="-1"><b>ВАЖНО.</b> Данная опция доступна только в том случае, если включена системная политика шифрования.</font></P>
       </TD></TR><TR><TD VALIGN="TOP">
         <h4> Совместное использование</h4>
       </TD><TD> <B>Вкл.</B><BR>
