--- a/src/admin/help/ru/users.html
+++ b/src/admin/help/ru/users.html
@@ -75,7 +75,7 @@
           <P>Оставьте поле &quot;Поиск пользователей&quot; пустым для возврата к списку всех пользователей и групп LDAPGroup в системе.</P>
         </LI></UL>
       <P>Не щелкайте какие-либо участки страницы до ее полного обновления; после этого вы сможете просмотреть или отсортировать пользователей в результатах поиска и выполнить другие действия над ними. </P>
-      <P><b>Примечание.</b> Зарегистрировавшись как дополнительный администратор, вы сможете просматривать только тех пользователей, для которых вы назначены в качестве дополнительного администратора. Кроме того, управление пользователями осуществляется лишь в пределах прав, которыми вы наделены для такого управления. </P>
+      <P><b>Примечание.</b> Выполнив вход как дополнительный администратор, вы сможете просматривать только тех пользователей, для которых вы назначены в качестве дополнительного администратора. Кроме того, управление пользователями осуществляется лишь в пределах прав, которыми вы наделены для такого управления. </P>
     </LI></OL>
   <H4><A NAME="browsesearch"></A>Просмотр пользователей в результатах поиска</H4>
   <P>Выполняйте прокрутку вверх и вниз для просмотра результатов поиска и выбора нужного пользователя. Определить нужного пользователя можно по его имени пользователя, имени и фамилии.</P>
@@ -103,11 +103,11 @@
     </LI>
     <ul> <li>
       <P>Щелкните &quot;Включить&quot; для разрешения доступа к iFolder.</P>
-      <P>Это позволяет пользователю регистрироваться в папках iFolder и выполнять их синхронизацию.</P>
+      <P>Это позволяет пользователю входить в папки iFolder и выполнять их синхронизацию.</P>
     
     <LI> 
       <P>Щелкните &quot;Запретить&quot; для запрета доступа к iFolder.</P>
-      <P> Сеанс пользователя, зарегистрированного на момент установки данного значения, продолжается до тех пор, пока не будет выполнена разрегистрация. Данная политика вступает в силу при следующей попытке пользователя зарегистрироваться с использованием своей учетной записи. Чтобы блокировка вступила в силу немедленно, необходимо перезапустить сервисы Apache для сервера iFolder. При этом выполняется отключение всех активных сеансов, включая сеансы пользователей.</P>
+      <P> Сеанс пользователя, вошедшего в систему на момент установки данного значения, продолжается до тех пор, пока не будет выполнен выход. Данная политика вступает в силу при следующей попытке пользователя выполнить вход с использованием своей учетной записи. Чтобы блокировка вступила в силу немедленно, необходимо перезапустить сервисы Apache для сервера iFolder. При этом выполняется отключение всех активных сеансов, включая сеансы пользователей.</P>
     </LI></ul>
   </OL>
   <H3><A NAME="provision"></A>Персонификация и изменение доступа для пользователей iFolder </H3>
@@ -138,7 +138,7 @@
     </li>
     <li>Щелкните &quot;Персонификация доступа&quot;, чтобы открыть новую страницу, где можно персонифицировать или изменить доступ для выбранных пользователей к серверу iFolder в домене.</LI>
   </ol>
-  <P><B><FONT SIZE="-1">ПРИМЕЧАНИЕ.</FONT></B> <FONT SIZE="-1"> При первой регистрации пользователя, для которого на уровне пользователя не установлен домашний сервер, этому пользователю автоматически назначается сервер, назначенный группе LDAPGroup, к которой принадлежит этот пользователь.</FONT></P>
+  <P><B><FONT SIZE="-1">ПРИМЕЧАНИЕ.</FONT></B> <FONT SIZE="-1"> При первом входе пользователя, для которого на уровне пользователя не установлен домашний сервер, этому пользователю автоматически назначается сервер, назначенный группе LDAPGroup, к которой принадлежит этот пользователь.</FONT></P>
   <H3><A NAME="newuser"></A>Создание нового пользователя iFolder</H3>
   <BLOCKQUOTE> 
     <P><B><FONT SIZE="-1">ПРИМЕЧАНИЕ.</FONT></B> <FONT SIZE="-1">Можно создавать только пользователей без поддержки LDAP. Их можно создавать только в том случае, если сервер iFolder не подключен к серверу LDAP.</FONT></P>
