--- a/src/admin/help/ru/member.html
+++ b/src/admin/help/ru/member.html
@@ -63,7 +63,7 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
   
   <ol>
     <li> 
-      <p>Зарегистрируйтесь в приложении веб-администрирования с помощью соответствующих учетных данных.</p>  <P><B><FONT SIZE="-1">ПРИМЕЧАНИЕ.</FONT></B> <FONT SIZE="-1">Под <i>пользователями iFolder</i> подразумеваются как индивидуальные пользователи, так и группы LDAPGroup.</FONT></P>
+      <p>Войдите в приложение веб-администрирования с помощью соответствующих учетных данных.</p>  <P><B><FONT SIZE="-1">ПРИМЕЧАНИЕ.</FONT></B> <FONT SIZE="-1">Под <i>пользователями iFolder</i> подразумеваются как индивидуальные пользователи, так и группы LDAPGroup.</FONT></P>
       <p> На странице &quot;Пользователи&quot; отображается тип пользователя (администратор или пользователь), имя пользователя, полное имя пользователя (если доступно), сервер, к которому пользователю персонифицируется доступ, и состояние пользователя (&quot;Включено&quot; или &quot;Запрещено&quot;). </p>
     </li>
     <li> 
@@ -146,7 +146,7 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
   <P><A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="В начало"></A></p>
   
   
-<H4 CLASS="ruleabove"><IMG SRC="../../images/xrefbtn.gif" WIDTH="16" HEIGHT="16" ALT="См. также" align="top"> См. также</H4><BLOCKQUOTE class="task1"><P ><A HREF="login.html">Регистрация в приложении веб-администрирования</A><BR><A HREF="webacc.html">Запуск приложения веб-администрирования</A><BR><A HREF="users.html">Управление учетной записью пользователя</A><BR>
+<H4 CLASS="ruleabove"><IMG SRC="../../images/xrefbtn.gif" WIDTH="16" HEIGHT="16" ALT="См. также" align="top"> См. также</H4><BLOCKQUOTE class="task1"><P ><A HREF="login.html">Вход в приложение веб-администрирования</A><BR><A HREF="webacc.html">Запуск приложения веб-администрирования</A><BR><A HREF="users.html">Управление учетной записью пользователя</A><BR>
       <A HREF="ifolders.html">Управление папками iFolder</A><BR>
       <A HREF="ifolderdetails.html">Управление подробной информацией о папке iFolder</A></P></BLOCKQUOTE><P><A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="В начало"></A></P><P>&nbsp;</P><P CLASS="copyright">Символ товарного знака (<SUP><SMALL>&reg;</SMALL></SUP>, <SUP><SMALL>TM</SMALL></SUP> и т.&nbsp;д.) обозначает товарный знак Novell.  Символ звездочки (*) обозначает товарный знак независимого производителя.  Для получения дополнительной информации см. раздел <A HREF="imgr_legalnotices.html" TARGET="_self" ><font color="#cfcdc6">Юридическая информация</font></A>.</P></div><!-- This is the end of the Help Content layer. --> 
 </body>
