Updating localizated files.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@7181 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/src/webaccess/help/ru/changepassword.html
+++ b/src/webaccess/help/ru/changepassword.html
@@ -54,7 +54,7 @@
         <li>Нажмите <i>Сохранить</i>, чтобы сохранить изменения.</li>
   </ol>
   <p>Примечание. Пароль к учетной записи iFolder меняется непосредственно на сервере LDAP. Если один сервер LDAP служит центром управления пользователями для нескольких приложений, новый пароль <br>
-  будет действителен для всех этих приложений. После смены пароля сеанс iFolder заканчивается и выполняется выход. Чтобы установить соединение со службами iFolder, необходимо снова зарегистрироваться в системе.<br>
+  будет действителен для всех этих приложений. После смены пароля сеанс iFolder заканчивается и выполняется выход. Чтобы установить соединение со службами iFolder, необходимо снова войти в систему.<br>
   <br>
 &nbsp;</p>
       <a href="#top" target="_self"><img src="../../images/goto_top.gif" width="19" height="19" border="0" alt="В начало"></a>
