--- a/src/webaccess/help/ru/home.html
+++ b/src/webaccess/help/ru/home.html
@@ -51,13 +51,13 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
     Значок <img src="../../images/ifolder_16-gray.gif" width="16" height="16" alt="Значок совместного использования"> показывает, что данная папка iFolder является запрещенной. К запрещенной папке iFolder нельзя получить доступ, кроме того, ее нельзя выбрать для выполнения каких-либо операций с папками iFolder.</p>
 	<p>Для каждой папки iFolder можно просмотреть дату создания и владельца. Щелкните ссылку папки iFolder для открытия нового окна со списком содержащихся в ней файлов и папок. </p>
   <p>Дополнительную информацию см. в следующих разделах:</p><blockquote > 
-<p><a href="#login" target="_self">Регистрация и разрегистрация</a> <br>
+<p><a href="#login" target="_self">Вход и выход</a> <br>
 <a href="#browse" target="_self">Поиск папки iFolder</a> <br>
              <a href="#manage" target="_self">Создание новой папки iFolder</a> <br>
 <a href="#delete" target="_self">Удаление папки iFolder</a></p></blockquote>
-<h3><a name="login"></a>Регистрация и разрегистрация</h3>
-  <p>Если во время работы с папками iFolder происходит тайм-аут системного соединения, веб-клиент возвращает пользователя на страницу регистрации. Можно повторно зарегистрироваться и продолжить работу, не закрывая веб-навигатор.</p>
-  <p>Для разрегистрации щелкните &quot;Разрегистрация&quot; в верхней правой области заголовка и закройте веб-навигатор. Во время разрегистрации выполняется переход по URL-адресу, заданному администратором при настройке конфигурации. Если разрегистрацию не выполнить, сеанс остается открытым до тех пор, пока не наступит тайм-аут сеанса, что может представлять угрозу системы защиты. </p>
+<h3><a name="login"></a>Вход и выход</h3>
+  <p>Если во время работы с папками iFolder происходит тайм-аут системного соединения, веб-клиент возвращает пользователя на страницу входа. Можно повторно войти и продолжить работу, не закрывая веб-навигатор.</p>
+  <p>Для выхода щелкните &quot;Выход&quot; в верхней правой области заголовка и закройте веб-навигатор. Во время выхода выполняется переход по URL-адресу, заданному администратором при настройке конфигурации. Если выход не выполнить, сеанс остается открытым до тех пор, пока не наступит тайм-аут сеанса, что может представлять угрозу системы защиты. </p>
 <p><a href="#top" target="_self"><img src="../../images/goto_top.gif" width="19" height="19" border="0" alt="В начало"></a></p>
 
   <h3><a name="browse"></a>Поиск папок iFolder</h3>
