--- a/src/webaccess/help/ru/newifolder.html
+++ b/src/webaccess/help/ru/newifolder.html
@@ -65,8 +65,8 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
       <B> Тип</B><BR>
       Выберите тип создаваемой папки iFolder.<br>
       <BLOCKQUOTE> <B>Шифрованная</B><BR>
-        Выберите данный параметр, чтобы зашифровать папку iFolder и содержащиеся в ней файлы. <BR>
-        <p><strong>ВАЖНО. </strong>Данный параметр недоступен до тех пор, пока администратор не включит политику шифрования. </p>
+        Выберите данную опцию, чтобы зашифровать папку iFolder и содержащиеся в ней файлы. <BR>
+        <p><strong>ВАЖНО. </strong>Данная опция недоступна до тех пор, пока администратор не включит политику шифрования. </p>
         <B> Обычная</B><BR>
         Выберите параметр &quot;Совместно используется&quot; для разрешения совместного использования Вашей папки iFolder с другими учетными записями iFolder. <BR>
         <p><strong>ВАЖНО. </strong>Совместно используемые папки iFolder нельзя зашифровать, а зашифрованные - совместно использовать.</p>
@@ -74,7 +74,7 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
     </BLOCKQUOTE>
     <li> 
       <p>Выберите в раскрывающемся списке агент восстановления.</p>
-      <p><strong>Примечание.</strong> Данный параметр будет недоступен, если администратор при настройке сервера iFolder не выбрал параметр &quot;Включить агент восстановления&quot;.</p>
+      <p><strong>Примечание.</strong> Данная опция будет недоступна, если администратор при настройке сервера iFolder не выбрал параметр &quot;Включить агент восстановления&quot;.</p>
       <p>В качестве агента восстановления может выступать система, организация или лицо, не зависимое от системы iFolder, у которого может храниться ключ для восстановления секретной контрольной фразы.</p>
       <p><strong>ВАЖНО. </strong> Если агент восстановления не задан, то в случае утери контрольной фразы восстановление зашифрованных данных невозможно. </p>
     </li>
