--- a/src/webaccess/help/ru/login.html
+++ b/src/webaccess/help/ru/login.html
@@ -4,7 +4,7 @@
 <meta http-equiv="content-type" content="text/html;charset=UTF-8"> 
 
 <!-- Novell iFolder 3.x Web Access --> 
-<title>Регистрация веб-клиента</title> 
+<title>Вход в веб-клиент</title> 
 
 <!-- Metadata --> <meta name="Author" content="iFolder 3.x Documentation Manager"> 
 <meta name="date" content="02-17-2005"> 
@@ -46,13 +46,13 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
 <!-- This is the start of the Help Content Layer --> <div id="helpcontent"> 
 <!-- The Page Heading uses CSS style "head3b". This creates an H3 header
             with a line beneath it.
-       --> <h3 class="head3b">Регистрация в веб-клиенте</h3>
-  <p> Зарегистрируйтесь в веб-клиенте Novell iFolder<sup><small>&reg;</small></sup> 3.7 с помощью учетной записи iFolder 3.7 для получения доступа к папкам и файлам, содержащимся в папках iFolder, доступных Вам или группе LDAPGroup, членом которой Вы являетесь. Кроме того, можно использовать папки iFolder, к которым Вы имеете доступ, но которые не настроены на локальном компьютере. (Получение доступа к файлам с помощью учетной записи веб-клиента Novell iFolder 2.<I>x</I> невозможно.) Проверка имени пользователя и пароля выполняется в базе данных сервиса Каталога LDAP. 
+       --> <h3 class="head3b">Вход в веб-клиент</h3>
+  <p> Войдите в веб-клиент Novell iFolder<sup><small>&reg;</small></sup> 3.7 с помощью учетной записи iFolder 3.7 для получения доступа к папкам и файлам, содержащимся в папках iFolder, доступных Вам или группе LDAPGroup, членом которой Вы являетесь. Кроме того, можно использовать папки iFolder, к которым Вы имеете доступ, но которые не настроены на локальном компьютере. (Получение доступа к файлам с помощью учетной записи веб-клиента Novell iFolder 2.<I>x</I> невозможно.) Проверка имени пользователя и пароля выполняется в базе данных сервиса Каталога LDAP. 
   </p>
   <p>Кроме того, можно указать, какой из поддерживаемых языков следует использовать. Этот язык обычно соответствует коду языка сервера iFolder и локального компьютера. Убедитесь в том, что язык навигатора настроен для поддержки требуемого языка. </p>
   <ol><li><p> Укажите имя пользователя и пароль учетной записи iFolder, к которой необходимо получить доступ. <br><br>
         Имена пользователей и пароли зависят от регистра. </p>
-    </li><li><p>В раскрывающемся списке выберите язык, который необходимо использовать для доступа к файлам. <br></p></li><li><p>Щелкните &quot;Регистрация&quot;.</p></li></ol>
+    </li><li><p>В раскрывающемся списке выберите язык, который необходимо использовать для доступа к файлам. <br></p></li><li><p>Щелкните &quot;Вход&quot;.</p></li></ol>
 <A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="В начало"></A>
   <H4 CLASS="ruleabove"><IMG SRC="../../images/xrefbtn.gif" WIDTH="16" HEIGHT="16" ALT="См. также" align="top"> См. также</H4><BLOCKQUOTE class="task1"><P ><A HREF="home.html">Доступ к папкам iFolder</A><BR><A HREF="browse.html">Доступ к файлам и папкам в iFolder</A><BR><A HREF="members.html">Управление членами iFolder</A></P></BLOCKQUOTE><P><A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="В начало"></A>
 <P CLASS="copyright">Символ товарного знака (<SUP><SMALL>&reg;</SMALL></SUP>, <SUP><SMALL>TM</SMALL></SUP> и т.&nbsp;д.) обозначает товарный знак Novell.  Символ звездочки (*) обозначает товарный знак независимого производителя.  Для получения дополнительной информации см. раздел <A HREF="legalnotices.html" TARGET="_self" ><font color="#cfcdc6">Юридическая информация</font></A>.</P></div><!-- This is the end of the Help Content layer. --> 
